Send registration email, confirm email API method