@@ -2,6 +2,7 @@ package in.pervush.poker.controller;
 
 import in.pervush.poker.exception.ErrorStatusException;
 import in.pervush.poker.exception.TaskUrlExistsException;
+import in.pervush.poker.exception.TeamNotFoundException;
 import in.pervush.poker.model.ErrorResponse;
 import in.pervush.poker.model.ErrorStatus;
 import in.pervush.poker.model.tasks.CreateTaskRequest;
@@ -70,16 +71,21 @@ public class TasksController {
                                          @RequestParam(name = "search", required = false) String search,
                                          @RequestParam(name = "finished", required = false) Boolean finished,
                                          @AuthenticationPrincipal final UserDetailsImpl user) {
-        return tasksService.getTasks(user.getUserUuid(), teamUuid, search, finished).stream()
-                .map(v -> {
-                    final var votes = votesService.getVotedUserUuids(v.taskUuid(), user.getUserUuid(), teamUuid);
+        try {
+            return tasksService.getTasks(user.getUserUuid(), teamUuid, search, finished).stream()
+                    .map(v -> {
+                        final var votes = votesService.getVotedUserUuids(v.taskUuid(), user.getUserUuid(), teamUuid);
 
-                    return TaskView.of(
-                            v,
-                            userService.getUser(v.userUuid()),
-                            votes.stream().map(userService::getUser).collect(Collectors.toList())
-                    );
-                }).toList();
+                        return TaskView.of(
+                                v,
+                                userService.getUser(v.userUuid()),
+                                votes.stream().map(userService::getUser).collect(Collectors.toList())
+                        );
+                    }).toList();
+        } catch (final TeamNotFoundException ex) {
+            return Collections.emptyList();
+        }
+
     }
 
     @Operation(
